# wherefore

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PERFORMANCE.md  README.md  SECURITY.md  TAXONOMY.md  TAXONOMY_TODO.md  cli.py  dev_setup.sh  pyproject.toml  troubleshooting.md
.github/workflows/: ci.yml
evals/fixtures/: fixture_encoding_mismatch_001_ground_truth.json  fixture_encoding_mismatch_001_target.csv  fixture_enum_drift_001_ground_truth.json  fixture_enum_drift_001_source.csv  fixture_enum_drift_001_target.csv  fixture_timezone_shift_001_ground_truth.json  fixture_timezone_shift_001_source.csv  fixture_timezone_shift_001_target.csv  fixture_truncation_001_ground_truth.json  fixture_truncation_001_target.csv  fixture_unrecognized_001_ground_truth.json  fixture_unrecognized_001_source.csv  fixture_unrecognized_001_target.csv  regenerate.py
evals/harness/: run_eval.py  scoring.py
scripts/: test_explain_live.py
src/wherefore/: cli.py
src/wherefore/clustering/: cluster_mismatches.py  signatures.py
src/wherefore/comparison/: db.py  diff_engine.py  diff_result.py  key_matching.py  loaders.py
src/wherefore/reasoning/: explain.py  redaction.py  report.py
src/wherefore/reasoning/prompts/: cluster_explanation_v1.md
src/wherefore/reasoning/providers/: base.py  claude.py
src/wherefore/synthetic/: base_dataset.py  ground_truth.py
src/wherefore/synthetic/corruptors/: encoding_mismatch.py  enum_drift.py  key_mismatch.py  timezone_shift.py  truncation.py
src/wherefore/taxonomy/: registry.py  schema.py
src/wherefore/taxonomy/patterns/: encoding_mismatch.yaml  enum_drift.yaml  key_mismatch.yaml  timezone_shift.yaml  truncation.yaml
tests/test_cli/: test_cli.py
tests/test_clustering/: test_cluster_mismatches.py  test_row_presence.py  test_signatures.py
tests/test_comparison/: test_db.py  test_diff_engine.py  test_key_matching.py  test_loaders.py
tests/test_evals/: test_run_eval.py  test_scoring.py
tests/test_reasoning/: test_explain.py  test_redaction.py
tests/test_synthetic/: test_base_dataset.py
tests/test_synthetic/test_corruptors/: test_encoding_mismatch.py  test_enum_drift.py  test_key_mismatch.py  test_truncation.py
tests/test_taxonomy/: test_registry.py
